Feature/oauth setup (#88)
Feature: Added client module and scopes for OAuth

* Added client module for calling AEM via OAuth 2.0
* Added new OAuth Scopes
* Update permissions to allow OAuth call to GraphQL
* Added persisteted queries to codebase
* Added configs to enable OAUth
* Updated oauth service user with permissions needed for OAuth
* Added Oak Index for oauth user query